# RLProp

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/rlprop/: __init__.py  core.py  normalize.py  objectives.py  rerank.py
tests/: test_core.py  test_parity.py  test_rerank.py
